added config dump for admin tool, fixed bug where an empty config is needed for kwild, and renamed client constructors
