# core/rpc/http/tx/api/swagger.yaml
@@ -468,6 +468,21 @@ components:
         - type: type
           value: value
         type: type
+    txDatasetInfo:
+      type: object
+      properties:
+        name:
+          type: string
+        owner:
+          pattern: "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$"
+          type: string
+          format: byte
+        dbid:
+          type: string
+      example:
+        owner: ""
+        dbid: dbid
+        name: name
     txEstimatePriceRequest:
       type: object
       properties:
@@ -746,11 +761,15 @@ components:
         databases:
           type: array
           items:
-            type: string
+            $ref: '#/components/schemas/txDatasetInfo'
       example:
         databases:
-        - databases
-        - databases
+        - owner: ""
+          dbid: dbid
+          name: name
+        - owner: ""
+          dbid: dbid
+          name: name
     txPingResponse:
       type: object
       properties:
