# core/types/types.go
@@ -58,3 +58,10 @@ type NodeInfo struct {
 func (v *Validator) String() string {
 	return fmt.Sprintf("{pubkey = %x, power = %d}", v.PubKey, v.Power)
 }
+
+// DatasetInfo contains metadata about a dataset.
+type DatasetInfo struct {
+	Name  string `json:"name"`
+	Owner []byte `json:"owner"`
+	DBID  string `json:"dbid"`
+}
